# Code-Review-Assistant

./: .coverage  .env.example  .flake8  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt
app/: config.py  exceptions.py  main.py  middleware.py
app/api/: router.py
app/api/v1/: router.py
app/services/: review_logic.py  review_service.py
tests/: test_app.py  test_main.py
