[project]
name = "code-review-assistant"
version = "0.1.0"
description = "A code review assistant API using FastAPI and Ollama."
readme = "README.md"
requires-python = ">=3.14"

[project.dependencies]
fastapi = "0.138.0"
requests = "2.34.2"
python-dotenv = "1.2.2"
uvicorn = "0.49.0"

[project.optional-dependencies]
test = ["pytest>=8.0.0", "pytest-cov>=4.0.0"]
lint = ["flake8>=7.0.0"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
